added a GameDetails component with the details of every game

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,8 @@
 .header {
-    margin: 3rem;
+    margin: 5rem 3rem 1rem 3rem;
 }
 
 .header h1 {
     color: palevioletred;
+    margin-bottom: 3rem;
 }
