--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,10 +3,12 @@
 }
 
 .header h1 {
-    color: palevioletred;
+    color: rgb(124, 19, 97);
     margin-bottom: 6rem;
     text-align: center;
-    line-height: 4rem;
+    line-height: 7rem;
+    font-family: 'Amatic SC', cursive;
+    font-size: 5rem;
 }
 
 .header-return {
@@ -17,4 +19,14 @@
 
 .header-return:hover {
     color: palevioletred;
+}
+
+@media (max-width: 700px) {
+    
+    .header h1 {
+        margin-bottom: 3rem;
+        line-height: 2.5rem;
+        font-size: 2rem;
+    }
+    
 }
