--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 :root {
   --blue-color: rgb(19, 46, 126);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
