--- a/src/components/GameDetails.css
+++ b/src/components/GameDetails.css
@@ -6,7 +6,8 @@
 .game-details h2 {
     padding: 2rem 0;
     color: var(--blue-color);
-    font-size: 3.5rem;
+    font-size: 4.5rem;
+    font-family: 'Amatic SC', cursive;
 }
 
 .game-details h3 {
@@ -17,7 +18,9 @@
 }
 
 .game-screenshot {
-    width: 350px;
+    min-width: 350px;
+    width: 35vw;
+    max-width: 550px;
     padding: 1rem;
     transition: padding 0.3s ease-in;
 }
@@ -26,3 +29,22 @@
     padding: 0.5rem;
 }
 
+@media (max-width: 700px) {
+
+    .game-details h2 {
+        font-size: 2.5rem;
+    }
+
+    .screenshots-countainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .game-screenshot {
+        width: 100%;
+        min-width: 200px;
+        height: auto;
+    }
+
+}
